in section numbering

--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -51,7 +51,7 @@ sorting = none]{biblatex}
 % магия для автоматических гиперссылок задача-решение
 \newlist{myenum}{enumerate}{3}
 % \newcounter{problem}[chapter] % нумерация задач внутри глав
-\newcounter{problem}
+\newcounter{problem}[section]
 
 \newenvironment{problem}%
 {%
