--- a/all_solutions.tex
+++ b/all_solutions.tex
@@ -116,7 +116,10 @@
 \end{solution}
 \protect \hypertarget {soln:3.4}{}
 \begin{solution}{{3.4}}
-  $\P(X\geq 2 \mid X\geq 1)=\frac{\P(X \geq 2)}{\P(X \geq 1)}= \approx 0.37$
+\[
+\P(X = 2) = \frac{C_4^2 C_{48}^{11}}{C_{52}^{13}}
+\]
+$\P(X\geq 2 \mid X\geq 1)=\frac{\P(X \geq 2)}{\P(X \geq 1)}= \approx 0.37$
 \end{solution}
 \protect \hypertarget {soln:3.5}{}
 \begin{solution}{{3.5}}
@@ -225,127 +228,57 @@ $ 2/3 $, $1/2$, $ 1/2 $, $ 14/27 $
 \end{solution}
 \protect \hypertarget {soln:6.1}{}
 \begin{solution}{{6.1}}
+
 \end{solution}
 \protect \hypertarget {soln:6.2}{}
 \begin{solution}{{6.2}}
 \end{solution}
 \protect \hypertarget {soln:6.3}{}
 \begin{solution}{{6.3}}
-$1.75$
+
 \end{solution}
 \protect \hypertarget {soln:6.4}{}
 \begin{solution}{{6.4}}
-  $\E(X_0)=100\cdot \frac{99}{464} + \frac{100}{464} + \ldots + \frac{464}{464}$
-\end{solution}
-\protect \hypertarget {soln:6.5}{}
-\begin{solution}{{6.5}}
-\end{solution}
-\protect \hypertarget {soln:6.6}{}
-\begin{solution}{{6.6}}
-$\E(X)=1$, $\Var(X)=1$
-\end{solution}
-\protect \hypertarget {soln:6.7}{}
-\begin{solution}{{6.7}}
-$\E(Y)=20-20 \left( \frac{19}{20} \right)^{10}\approx 8.025$
-\end{solution}
-\protect \hypertarget {soln:6.8}{}
-\begin{solution}{{6.8}}
-$\E(X)=9$, $\Var(X)=1.2$
-\end{solution}
-\protect \hypertarget {soln:6.9}{}
-\begin{solution}{{6.9}}
-  $10 \cdot 0.9^7$
-\end{solution}
-\protect \hypertarget {soln:6.10}{}
-\begin{solution}{{6.10}}
-  $\E(X)=\frac{30}{30} + \frac{30}{29} + \ldots + \frac{30}{1}\approx 119.85$
 
-  аппроксимация через логарифм $30 \ln 30 \approx 102$
-\end{solution}
-\protect \hypertarget {soln:6.11}{}
-\begin{solution}{{6.11}}
-\end{solution}
-\protect \hypertarget {soln:6.12}{}
-\begin{solution}{{6.12}}
-\end{solution}
-\protect \hypertarget {soln:6.13}{}
-\begin{solution}{{6.13}}
-\end{solution}
-\protect \hypertarget {soln:6.14}{}
-\begin{solution}{{6.14}}
-\end{solution}
-\protect \hypertarget {soln:6.15}{}
-\begin{solution}{{6.15}}
-\end{solution}
-\protect \hypertarget {soln:6.16}{}
-\begin{solution}{{6.16}}
-\end{solution}
-\protect \hypertarget {soln:6.17}{}
-\begin{solution}{{6.17}}
-\end{solution}
-\protect \hypertarget {soln:6.18}{}
-\begin{solution}{{6.18}}
-\end{solution}
-\protect \hypertarget {soln:6.19}{}
-\begin{solution}{{6.19}}
-\end{solution}
-\protect \hypertarget {soln:6.20}{}
-\begin{solution}{{6.20}}
-\end{solution}
-\protect \hypertarget {soln:6.21}{}
-\begin{solution}{{6.21}}
-\end{solution}
-\protect \hypertarget {soln:6.22}{}
-\begin{solution}{{6.22}}
-\end{solution}
-\protect \hypertarget {soln:6.23}{}
-\begin{solution}{{6.23}}
-\end{solution}
-\protect \hypertarget {soln:6.24}{}
-\begin{solution}{{6.24}}
 \end{solution}
 \protect \hypertarget {soln:7.1}{}
 \begin{solution}{{7.1}}
-  $\P(X_8=13)=e^{-8.8}8.8^{13}/13!\approx 0.046$
-
-  $\P(Y_{n+1}>1)=e^{-1.1}\approx 0.33$
 \end{solution}
 \protect \hypertarget {soln:7.2}{}
 \begin{solution}{{7.2}}
 \end{solution}
 \protect \hypertarget {soln:7.3}{}
 \begin{solution}{{7.3}}
+$1.75$
 \end{solution}
 \protect \hypertarget {soln:7.4}{}
 \begin{solution}{{7.4}}
+  $\E(X_0)=100\cdot \frac{99}{464} + \frac{100}{464} + \ldots + \frac{464}{464}$
 \end{solution}
 \protect \hypertarget {soln:7.5}{}
 \begin{solution}{{7.5}}
-$\frac{a}{a+b}$, экспоненциально с параметром $a+b$, $\frac{1}{a+b}$
 \end{solution}
 \protect \hypertarget {soln:7.6}{}
 \begin{solution}{{7.6}}
-  геометрическое распределение
-
-  $\E(N)=\frac{\lambda_{in}}{\lambda_{capacity}-\lambda_{in}}$
+$\E(X)=1$, $\Var(X)=1$
 \end{solution}
 \protect \hypertarget {soln:7.7}{}
 \begin{solution}{{7.7}}
-  The probability of observing a taxi before a bus is given by $3/(3+2)=3/5$ since the
-
-  waiting times are independent and exponentially distributed. By the memoryless
-  property both processes then restart and hence the probability of observing (at least)
-  two taxis before the first bus is $(3/5)^2=9/25$. The probability of observing exactly
-  two taxis before the first bus is $(3/5)^2*(2/5)=18/125$.
+$\E(Y)=20-20 \left( \frac{19}{20} \right)^{10}\approx 8.025$
 \end{solution}
 \protect \hypertarget {soln:7.8}{}
 \begin{solution}{{7.8}}
+$\E(X)=9$, $\Var(X)=1.2$
 \end{solution}
 \protect \hypertarget {soln:7.9}{}
 \begin{solution}{{7.9}}
+  $10 \cdot 0.9^7$
 \end{solution}
 \protect \hypertarget {soln:7.10}{}
 \begin{solution}{{7.10}}
+  $\E(X)=\frac{30}{30} + \frac{30}{29} + \ldots + \frac{30}{1}\approx 119.85$
+
+  аппроксимация через логарифм $30 \ln 30 \approx 102$
 \end{solution}
 \protect \hypertarget {soln:7.11}{}
 \begin{solution}{{7.11}}
@@ -364,16 +297,36 @@ $\frac{a}{a+b}$, экспоненциально с параметром $a+b$, $
 \end{solution}
 \protect \hypertarget {soln:7.16}{}
 \begin{solution}{{7.16}}
-  \[ a(t+\Delta)=a(t)(1-\Delta)+(1-a(t))\Delta + o(\Delta) \]
-  сейчас четное = за секунду было четное и никто не зашел + за секунду было нечетное и один зашел
-  $a'(t)=1-2a(t)$, $a(0)=1$
-  $a(t)=(1+\exp(-2t))/2$
 \end{solution}
 \protect \hypertarget {soln:7.17}{}
 \begin{solution}{{7.17}}
 \end{solution}
+\protect \hypertarget {soln:7.18}{}
+\begin{solution}{{7.18}}
+\end{solution}
+\protect \hypertarget {soln:7.19}{}
+\begin{solution}{{7.19}}
+\end{solution}
+\protect \hypertarget {soln:7.20}{}
+\begin{solution}{{7.20}}
+\end{solution}
+\protect \hypertarget {soln:7.21}{}
+\begin{solution}{{7.21}}
+\end{solution}
+\protect \hypertarget {soln:7.22}{}
+\begin{solution}{{7.22}}
+\end{solution}
+\protect \hypertarget {soln:7.23}{}
+\begin{solution}{{7.23}}
+\end{solution}
+\protect \hypertarget {soln:7.24}{}
+\begin{solution}{{7.24}}
+\end{solution}
 \protect \hypertarget {soln:8.1}{}
 \begin{solution}{{8.1}}
+  $\P(X_8=13)=e^{-8.8}8.8^{13}/13!\approx 0.046$
+
+  $\P(Y_{n+1}>1)=e^{-1.1}\approx 0.33$
 \end{solution}
 \protect \hypertarget {soln:8.2}{}
 \begin{solution}{{8.2}}
@@ -386,34 +339,28 @@ $\frac{a}{a+b}$, экспоненциально с параметром $a+b$, $
 \end{solution}
 \protect \hypertarget {soln:8.5}{}
 \begin{solution}{{8.5}}
-  \[
-  \P(X>0.5) = 1 - \P(X\leq 0.5) = 1 - P(X\leq 0.5, Y\leq +\infty) = 1 - F(0.5, +\infty)
-  \]
-  $F_X(x)=F(x, +\infty)$, $\P(X=Y+0.2)=0$ в силу непрерывности величин
-
-  $X$ и $Y$ независимы, так как $F(x,y)=F(x)\cdot F(y)$
+$\frac{a}{a+b}$, экспоненциально с параметром $a+b$, $\frac{1}{a+b}$
 \end{solution}
 \protect \hypertarget {soln:8.6}{}
 \begin{solution}{{8.6}}
-  можно через смешанную производную функции распределения $F(l,r)$
-  можно через разложение $f(l|r)\cdot f(r)$
-  \[
-  f(l,r)=\begin{cases}
-  2, \text{ если } 0<l<r<1 \\
-  0, \text{ иначе }
-  \end{cases}
-  \]
+  геометрическое распределение
+
+  $\E(N)=\frac{\lambda_{in}}{\lambda_{capacity}-\lambda_{in}}$
 \end{solution}
 \protect \hypertarget {soln:8.7}{}
 \begin{solution}{{8.7}}
+  The probability of observing a taxi before a bus is given by $3/(3+2)=3/5$ since the
+
+  waiting times are independent and exponentially distributed. By the memoryless
+  property both processes then restart and hence the probability of observing (at least)
+  two taxis before the first bus is $(3/5)^2=9/25$. The probability of observing exactly
+  two taxis before the first bus is $(3/5)^2*(2/5)=18/125$.
 \end{solution}
 \protect \hypertarget {soln:8.8}{}
 \begin{solution}{{8.8}}
-  Например, $X\sim U[0;1]$ и $Y=X$
 \end{solution}
 \protect \hypertarget {soln:8.9}{}
 \begin{solution}{{8.9}}
-$\Corr(X,Y)=1$, $\Corr(X,Z)=-1$
 \end{solution}
 \protect \hypertarget {soln:8.10}{}
 \begin{solution}{{8.10}}
@@ -423,40 +370,25 @@ $\Corr(X,Y)=1$, $\Corr(X,Z)=-1$
 \end{solution}
 \protect \hypertarget {soln:8.12}{}
 \begin{solution}{{8.12}}
-      $\Cov(X,Y)=0$, зависимы
 \end{solution}
 \protect \hypertarget {soln:8.13}{}
 \begin{solution}{{8.13}}
-    $\Cov(X,Y)=0$, зависимы
 \end{solution}
 \protect \hypertarget {soln:8.14}{}
 \begin{solution}{{8.14}}
-  $\Cov(X,Y)=0$, зависимы
 \end{solution}
 \protect \hypertarget {soln:8.15}{}
 \begin{solution}{{8.15}}
-  $-1/5$
 \end{solution}
 \protect \hypertarget {soln:8.16}{}
 \begin{solution}{{8.16}}
+  \[ a(t+\Delta)=a(t)(1-\Delta)+(1-a(t))\Delta + o(\Delta) \]
+  сейчас четное = за секунду было четное и никто не зашел + за секунду было нечетное и один зашел
+  $a'(t)=1-2a(t)$, $a(0)=1$
+  $a(t)=(1+\exp(-2t))/2$
 \end{solution}
 \protect \hypertarget {soln:8.17}{}
 \begin{solution}{{8.17}}
-\end{solution}
-\protect \hypertarget {soln:8.18}{}
-\begin{solution}{{8.18}}
-\end{solution}
-\protect \hypertarget {soln:8.19}{}
-\begin{solution}{{8.19}}
-  нет, например, берем независимые $X$ и $Z$ и возьмём $Y=X+Z$.
-\end{solution}
-\protect \hypertarget {soln:8.20}{}
-\begin{solution}{{8.20}}
-нет
-\end{solution}
-\protect \hypertarget {soln:8.21}{}
-\begin{solution}{{8.21}}
-  корреляция равна $0$, зависимы, так как знание $X$ несёт информацию об $Y$, например, при $X=0$ можно утверждать, что $|Y| \in [1;2]$.
 \end{solution}
 \protect \hypertarget {soln:9.1}{}
 \begin{solution}{{9.1}}
@@ -466,10 +398,96 @@ $\Corr(X,Y)=1$, $\Corr(X,Z)=-1$
 \end{solution}
 \protect \hypertarget {soln:9.3}{}
 \begin{solution}{{9.3}}
-$x_{max}=\mu$, $x=\mu \pm \sigma$
 \end{solution}
 \protect \hypertarget {soln:9.4}{}
 \begin{solution}{{9.4}}
+\end{solution}
+\protect \hypertarget {soln:9.5}{}
+\begin{solution}{{9.5}}
+  \[
+  \P(X>0.5) = 1 - \P(X\leq 0.5) = 1 - P(X\leq 0.5, Y\leq +\infty) = 1 - F(0.5, +\infty)
+  \]
+  $F_X(x)=F(x, +\infty)$, $\P(X=Y+0.2)=0$ в силу непрерывности величин
+
+  $X$ и $Y$ независимы, так как $F(x,y)=F(x)\cdot F(y)$
+\end{solution}
+\protect \hypertarget {soln:9.6}{}
+\begin{solution}{{9.6}}
+  можно через смешанную производную функции распределения $F(l,r)$
+  можно через разложение $f(l|r)\cdot f(r)$
+  \[
+  f(l,r)=\begin{cases}
+  2, \text{ если } 0<l<r<1 \\
+  0, \text{ иначе }
+  \end{cases}
+  \]
+\end{solution}
+\protect \hypertarget {soln:9.7}{}
+\begin{solution}{{9.7}}
+\end{solution}
+\protect \hypertarget {soln:9.8}{}
+\begin{solution}{{9.8}}
+  Например, $X\sim U[0;1]$ и $Y=X$
+\end{solution}
+\protect \hypertarget {soln:9.9}{}
+\begin{solution}{{9.9}}
+$\Corr(X,Y)=1$, $\Corr(X,Z)=-1$
+\end{solution}
+\protect \hypertarget {soln:9.10}{}
+\begin{solution}{{9.10}}
+\end{solution}
+\protect \hypertarget {soln:9.11}{}
+\begin{solution}{{9.11}}
+\end{solution}
+\protect \hypertarget {soln:9.12}{}
+\begin{solution}{{9.12}}
+      $\Cov(X,Y)=0$, зависимы
+\end{solution}
+\protect \hypertarget {soln:9.13}{}
+\begin{solution}{{9.13}}
+    $\Cov(X,Y)=0$, зависимы
+\end{solution}
+\protect \hypertarget {soln:9.14}{}
+\begin{solution}{{9.14}}
+  $\Cov(X,Y)=0$, зависимы
+\end{solution}
+\protect \hypertarget {soln:9.15}{}
+\begin{solution}{{9.15}}
+  $-1/5$
+\end{solution}
+\protect \hypertarget {soln:9.16}{}
+\begin{solution}{{9.16}}
+\end{solution}
+\protect \hypertarget {soln:9.17}{}
+\begin{solution}{{9.17}}
+\end{solution}
+\protect \hypertarget {soln:9.18}{}
+\begin{solution}{{9.18}}
+\end{solution}
+\protect \hypertarget {soln:9.19}{}
+\begin{solution}{{9.19}}
+  нет, например, берем независимые $X$ и $Z$ и возьмём $Y=X+Z$.
+\end{solution}
+\protect \hypertarget {soln:9.20}{}
+\begin{solution}{{9.20}}
+нет
+\end{solution}
+\protect \hypertarget {soln:9.21}{}
+\begin{solution}{{9.21}}
+  корреляция равна $0$, зависимы, так как знание $X$ несёт информацию об $Y$, например, при $X=0$ можно утверждать, что $|Y| \in [1;2]$.
+\end{solution}
+\protect \hypertarget {soln:10.1}{}
+\begin{solution}{{10.1}}
+\end{solution}
+\protect \hypertarget {soln:10.2}{}
+\begin{solution}{{10.2}}
+\end{solution}
+\protect \hypertarget {soln:10.3}{}
+\begin{solution}{{10.3}}
+$x_{max}=\mu$, $x=\mu \pm \sigma$
+\end{solution}
+\protect \hypertarget {soln:10.4}{}
+\begin{solution}{{10.4}}
   \[
   f_{|X|}(t) =
   \begin{cases}
@@ -478,64 +496,34 @@ $x_{max}=\mu$, $x=\mu \pm \sigma$
   \end{cases}
   \]
 \end{solution}
-\protect \hypertarget {soln:9.5}{}
-\begin{solution}{{9.5}}
+\protect \hypertarget {soln:10.5}{}
+\begin{solution}{{10.5}}
   медиана — $\exp(\mu)$
   мода — $\exp(\mu - \sigma^2)$
   $\E(Y)=\exp(\mu+\sigma^2/2)$
   $\Var(Y)=\exp(2\mu + 2\sigma^2)-\exp(2\mu + \sigma^2)$
 
 \end{solution}
-\protect \hypertarget {soln:9.6}{}
-\begin{solution}{{9.6}}
+\protect \hypertarget {soln:10.6}{}
+\begin{solution}{{10.6}}
 \end{solution}
-\protect \hypertarget {soln:9.7}{}
-\begin{solution}{{9.7}}
+\protect \hypertarget {soln:10.7}{}
+\begin{solution}{{10.7}}
   Применяем формулу интегрирования по частям.
 \end{solution}
-\protect \hypertarget {soln:10.1}{}
-\begin{solution}{{10.1}}
+\protect \hypertarget {soln:11.1}{}
+\begin{solution}{{11.1}}
   b $4/20\geq 1-100/12$
 
   c $1-e^{-3}\geq 0.75$
 \end{solution}
-\protect \hypertarget {soln:10.2}{}
-\begin{solution}{{10.2}}
-  $\Var(X)\leq 5$
-\end{solution}
-\protect \hypertarget {soln:10.3}{}
-\begin{solution}{{10.3}}
-  $\P(X<20) \geq 0.5$
-\end{solution}
-\protect \hypertarget {soln:11.1}{}
-\begin{solution}{{11.1}}
-\end{solution}
 \protect \hypertarget {soln:11.2}{}
 \begin{solution}{{11.2}}
+  $\Var(X)\leq 5$
 \end{solution}
 \protect \hypertarget {soln:11.3}{}
 \begin{solution}{{11.3}}
-\end{solution}
-\protect \hypertarget {soln:11.4}{}
-\begin{solution}{{11.4}}
-  $S_{100} \sim \cN(1000, 100)$, $\P(S_{100}>1030)=\P(Z>3)=0.0013$
-\end{solution}
-\protect \hypertarget {soln:11.5}{}
-\begin{solution}{{11.5}}
-\end{solution}
-\protect \hypertarget {soln:11.6}{}
-\begin{solution}{{11.6}}
-\end{solution}
-\protect \hypertarget {soln:11.7}{}
-\begin{solution}{{11.7}}
-\end{solution}
-\protect \hypertarget {soln:11.8}{}
-\begin{solution}{{11.8}}
-  $4(\sqrt{2}-1)/3$, 20 problems
-\end{solution}
-\protect \hypertarget {soln:11.9}{}
-\begin{solution}{{11.9}}
-  $2/\pi$, 20 problems
+  $\P(X<20) \geq 0.5$
 \end{solution}
 \protect \hypertarget {soln:12.1}{}
 \begin{solution}{{12.1}}
@@ -548,6 +536,7 @@ $x_{max}=\mu$, $x=\mu \pm \sigma$
 \end{solution}
 \protect \hypertarget {soln:12.4}{}
 \begin{solution}{{12.4}}
+  $S_{100} \sim \cN(1000, 100)$, $\P(S_{100}>1030)=\P(Z>3)=0.0013$
 \end{solution}
 \protect \hypertarget {soln:12.5}{}
 \begin{solution}{{12.5}}
@@ -560,33 +549,11 @@ $x_{max}=\mu$, $x=\mu \pm \sigma$
 \end{solution}
 \protect \hypertarget {soln:12.8}{}
 \begin{solution}{{12.8}}
+  $4(\sqrt{2}-1)/3$, 20 problems
 \end{solution}
 \protect \hypertarget {soln:12.9}{}
 \begin{solution}{{12.9}}
-\end{solution}
-\protect \hypertarget {soln:12.10}{}
-\begin{solution}{{12.10}}
-\end{solution}
-\protect \hypertarget {soln:12.11}{}
-\begin{solution}{{12.11}}
-\end{solution}
-\protect \hypertarget {soln:12.12}{}
-\begin{solution}{{12.12}}
-\end{solution}
-\protect \hypertarget {soln:12.13}{}
-\begin{solution}{{12.13}}
-\end{solution}
-\protect \hypertarget {soln:12.14}{}
-\begin{solution}{{12.14}}
-\end{solution}
-\protect \hypertarget {soln:12.15}{}
-\begin{solution}{{12.15}}
-\end{solution}
-\protect \hypertarget {soln:12.16}{}
-\begin{solution}{{12.16}}
-\end{solution}
-\protect \hypertarget {soln:12.17}{}
-\begin{solution}{{12.17}}
+  $2/\pi$, 20 problems
 \end{solution}
 \protect \hypertarget {soln:13.1}{}
 \begin{solution}{{13.1}}
@@ -596,17 +563,12 @@ $x_{max}=\mu$, $x=\mu \pm \sigma$
 \end{solution}
 \protect \hypertarget {soln:13.3}{}
 \begin{solution}{{13.3}}
-  $K=170$, $M=120$ (симметричный интервал) или $K=M=168$ (площадь с одного края можно принять за 0) \\
-  Вариант: театр, два входа, два гардероба а) только пары, б) по одному
 \end{solution}
 \protect \hypertarget {soln:13.4}{}
 \begin{solution}{{13.4}}
 \end{solution}
 \protect \hypertarget {soln:13.5}{}
 \begin{solution}{{13.5}}
-  $\Corr(Y_1, Y_2) = 2/5$, $E(Y_t | Y_{t-1}) = 0.4 Y_{t-1}$
-  В среднем Машка не становиться ни грустней, ни улыбчивей
-  Представить $\E(Y_t | Y_{t-1}, Y_{t-2})$ в виде $\E(Y_t | Y_{t-1}, Y_{t-2}) = a_1 Y_{t-1} + a_2 Y_{t-2} + Z$
 \end{solution}
 \protect \hypertarget {soln:13.6}{}
 \begin{solution}{{13.6}}
@@ -622,7 +584,27 @@ $x_{max}=\mu$, $x=\mu \pm \sigma$
 \end{solution}
 \protect \hypertarget {soln:13.10}{}
 \begin{solution}{{13.10}}
-  $Y \sim N(0;1)$, нет, они нормальны только по отдельности, но не в совокупности, $\Corr(X,Y)=0$. Взять $Y=XZ$, где $Z$ принимает значение $1$ с вероятностью $p=3/4$ и $-1$ с вероятностью $1-p=1/4$
+\end{solution}
+\protect \hypertarget {soln:13.11}{}
+\begin{solution}{{13.11}}
+\end{solution}
+\protect \hypertarget {soln:13.12}{}
+\begin{solution}{{13.12}}
+\end{solution}
+\protect \hypertarget {soln:13.13}{}
+\begin{solution}{{13.13}}
+\end{solution}
+\protect \hypertarget {soln:13.14}{}
+\begin{solution}{{13.14}}
+\end{solution}
+\protect \hypertarget {soln:13.15}{}
+\begin{solution}{{13.15}}
+\end{solution}
+\protect \hypertarget {soln:13.16}{}
+\begin{solution}{{13.16}}
+\end{solution}
+\protect \hypertarget {soln:13.17}{}
+\begin{solution}{{13.17}}
 \end{solution}
 \protect \hypertarget {soln:14.1}{}
 \begin{solution}{{14.1}}
@@ -632,24 +614,43 @@ $x_{max}=\mu$, $x=\mu \pm \sigma$
 \end{solution}
 \protect \hypertarget {soln:14.3}{}
 \begin{solution}{{14.3}}
-Являются: $X_{t}=-W_{t}$, $X_{t}=W_{a+t}-W_{a}$, $X_{t}=\frac{1}{a}W_{a^{2}t}$
+  $K=170$, $M=120$ (симметричный интервал) или $K=M=168$ (площадь с одного края можно принять за 0) \\
+  Вариант: театр, два входа, два гардероба а) только пары, б) по одному
 \end{solution}
 \protect \hypertarget {soln:14.4}{}
 \begin{solution}{{14.4}}
 \end{solution}
 \protect \hypertarget {soln:14.5}{}
 \begin{solution}{{14.5}}
+  $\Corr(Y_1, Y_2) = 2/5$, $E(Y_t | Y_{t-1}) = 0.4 Y_{t-1}$
+  В среднем Машка не становиться ни грустней, ни улыбчивей
+  Представить $\E(Y_t | Y_{t-1}, Y_{t-2})$ в виде $\E(Y_t | Y_{t-1}, Y_{t-2}) = a_1 Y_{t-1} + a_2 Y_{t-2} + Z$
+\end{solution}
+\protect \hypertarget {soln:14.6}{}
+\begin{solution}{{14.6}}
+\end{solution}
+\protect \hypertarget {soln:14.7}{}
+\begin{solution}{{14.7}}
+\end{solution}
+\protect \hypertarget {soln:14.8}{}
+\begin{solution}{{14.8}}
+\end{solution}
+\protect \hypertarget {soln:14.9}{}
+\begin{solution}{{14.9}}
+\end{solution}
+\protect \hypertarget {soln:14.10}{}
+\begin{solution}{{14.10}}
+  $Y \sim N(0;1)$, нет, они нормальны только по отдельности, но не в совокупности, $\Corr(X,Y)=0$. Взять $Y=XZ$, где $Z$ принимает значение $1$ с вероятностью $p=3/4$ и $-1$ с вероятностью $1-p=1/4$
 \end{solution}
 \protect \hypertarget {soln:15.1}{}
 \begin{solution}{{15.1}}
-Среднее равно $(x+25)/5$. Если $x<5$, получаем $x=0$. Если $x \in (5; 7)$, получаем $x=25/4$. Если $x>7$, получаем $x=10$.
 \end{solution}
 \protect \hypertarget {soln:15.2}{}
 \begin{solution}{{15.2}}
-Медиана не изменится, среднее упадёт на $10/25=0.4$. Для случая роста $153$: среднее упадёт на $0.8$, медиана упадёт произвольно на некое число из отрезка $[0;2]$.
 \end{solution}
 \protect \hypertarget {soln:15.3}{}
 \begin{solution}{{15.3}}
+Являются: $X_{t}=-W_{t}$, $X_{t}=W_{a+t}-W_{a}$, $X_{t}=\frac{1}{a}W_{a^{2}t}$
 \end{solution}
 \protect \hypertarget {soln:15.4}{}
 \begin{solution}{{15.4}}
@@ -657,37 +658,13 @@ $x_{max}=\mu$, $x=\mu \pm \sigma$
 \protect \hypertarget {soln:15.5}{}
 \begin{solution}{{15.5}}
 \end{solution}
-\protect \hypertarget {soln:15.6}{}
-\begin{solution}{{15.6}}
-  два независимых симметричных распределения; практически любая сумма несимметричных распределений, например, два независимых с $p(x)=2-2x$ на $[0;1]$; неотрицательные случайные величины; симметричные около нуля случайные величины
-\end{solution}
-\protect \hypertarget {soln:15.7}{}
-\begin{solution}{{15.7}}
-  Исключим те варианты, когда все пять наблюдений оказались или синхронно выше, или синхронно ниже медианы, получаем, $p=1-2\cdot 0.5^5=1-0.5^4$.
-\end{solution}
-\protect \hypertarget {soln:15.8}{}
-\begin{solution}{{15.8}}
-\end{solution}
-\protect \hypertarget {soln:15.9}{}
-\begin{solution}{{15.9}}
-\end{solution}
-\protect \hypertarget {soln:15.10}{}
-\begin{solution}{{15.10}}
-\end{solution}
-\protect \hypertarget {soln:15.11}{}
-\begin{solution}{{15.11}}
-\end{solution}
-\protect \hypertarget {soln:15.12}{}
-\begin{solution}{{15.12}}
-\end{solution}
-\protect \hypertarget {soln:15.13}{}
-\begin{solution}{{15.13}}
-\end{solution}
 \protect \hypertarget {soln:16.1}{}
 \begin{solution}{{16.1}}
+Среднее равно $(x+25)/5$. Если $x<5$, получаем $x=0$. Если $x \in (5; 7)$, получаем $x=25/4$. Если $x>7$, получаем $x=10$.
 \end{solution}
 \protect \hypertarget {soln:16.2}{}
 \begin{solution}{{16.2}}
+Медиана не изменится, среднее упадёт на $10/25=0.4$. Для случая роста $153$: среднее упадёт на $0.8$, медиана упадёт произвольно на некое число из отрезка $[0;2]$.
 \end{solution}
 \protect \hypertarget {soln:16.3}{}
 \begin{solution}{{16.3}}
@@ -698,8 +675,49 @@ $x_{max}=\mu$, $x=\mu \pm \sigma$
 \protect \hypertarget {soln:16.5}{}
 \begin{solution}{{16.5}}
 \end{solution}
+\protect \hypertarget {soln:16.6}{}
+\begin{solution}{{16.6}}
+  два независимых симметричных распределения; практически любая сумма несимметричных распределений, например, два независимых с $p(x)=2-2x$ на $[0;1]$; неотрицательные случайные величины; симметричные около нуля случайные величины
+\end{solution}
+\protect \hypertarget {soln:16.7}{}
+\begin{solution}{{16.7}}
+  Исключим те варианты, когда все пять наблюдений оказались или синхронно выше, или синхронно ниже медианы, получаем, $p=1-2\cdot 0.5^5=1-0.5^4$.
+\end{solution}
+\protect \hypertarget {soln:16.8}{}
+\begin{solution}{{16.8}}
+\end{solution}
+\protect \hypertarget {soln:16.9}{}
+\begin{solution}{{16.9}}
+\end{solution}
+\protect \hypertarget {soln:16.10}{}
+\begin{solution}{{16.10}}
+\end{solution}
+\protect \hypertarget {soln:16.11}{}
+\begin{solution}{{16.11}}
+\end{solution}
+\protect \hypertarget {soln:16.12}{}
+\begin{solution}{{16.12}}
+\end{solution}
+\protect \hypertarget {soln:16.13}{}
+\begin{solution}{{16.13}}
+\end{solution}
 \protect \hypertarget {soln:17.1}{}
 \begin{solution}{{17.1}}
+\end{solution}
+\protect \hypertarget {soln:17.2}{}
+\begin{solution}{{17.2}}
+\end{solution}
+\protect \hypertarget {soln:17.3}{}
+\begin{solution}{{17.3}}
+\end{solution}
+\protect \hypertarget {soln:17.4}{}
+\begin{solution}{{17.4}}
+\end{solution}
+\protect \hypertarget {soln:17.5}{}
+\begin{solution}{{17.5}}
+\end{solution}
+\protect \hypertarget {soln:18.1}{}
+\begin{solution}{{18.1}}
   Метод максимального правдоподобия:
   \[
     C_n^{Y_{\text{к}}}C_{n-Y_{\text{к}}}^{Y_{\text{щ}}}a^{Y_{\text{к}}}(2a)^{Y_{\text{щ}}}(1-3a)^{Y_{\text{б}}} \to \max_a
@@ -714,8 +732,8 @@ $x_{max}=\mu$, $x=\mu \pm \sigma$
 С точки зрения Пса Шарика, неизвестными являются две вероятности, $a$ и $b$. Он решает задачу максимизации по двум переменным. В результате получается вполне себе интуитивная оценка $\hat a_{\text{ПШ}} = Y_{\text{к}}/n$.
 
 \end{solution}
-\protect \hypertarget {soln:17.2}{}
-\begin{solution}{{17.2}}
+\protect \hypertarget {soln:18.2}{}
+\begin{solution}{{18.2}}
 Метод правдоподобия: $\max_n \P(S=80)$. Замечаем, что $S \sim Bin\left(100, p=\frac{100}{n}\right)$. Отсюда, $\hat n_{ML} = 125$.
 
 Метод моментов. Рассмотрим $Y_1$, $Y_2$, \ldots, $Y_n$. Величина $Y_i$ равна 1 если при втором отлове $i$-ый заяц оказался с бантом и 0 иначе.
@@ -729,24 +747,6 @@ $x_{max}=\mu$, $x=\mu \pm \sigma$
 \hat n_{MM} = \frac{100}{\bar Y} = \frac{100^2}{S}
 \]
 \end{solution}
-\protect \hypertarget {soln:17.3}{}
-\begin{solution}{{17.3}}
-\end{solution}
-\protect \hypertarget {soln:17.4}{}
-\begin{solution}{{17.4}}
-\end{solution}
-\protect \hypertarget {soln:17.5}{}
-\begin{solution}{{17.5}}
-\end{solution}
-\protect \hypertarget {soln:18.1}{}
-\begin{solution}{{18.1}}
-  $\hat{\theta}_{ML}=0.25$, $\hat{\theta}_{MM}=0.2$
-  $\hat{\theta}_{MM}=\frac{2{,}4-\bar{X}}{7}$
-\end{solution}
-\protect \hypertarget {soln:18.2}{}
-\begin{solution}{{18.2}}
-$\hat{a}=\ln(Y_{1})$, $\hat{b}=\ln(Y_{2})-\ln(Y_{1})$
-\end{solution}
 \protect \hypertarget {soln:18.3}{}
 \begin{solution}{{18.3}}
 \end{solution}
@@ -756,60 +756,78 @@ $\hat{a}=\ln(Y_{1})$, $\hat{b}=\ln(Y_{2})-\ln(Y_{1})$
 \protect \hypertarget {soln:18.5}{}
 \begin{solution}{{18.5}}
 \end{solution}
-\protect \hypertarget {soln:18.6}{}
-\begin{solution}{{18.6}}
-$\hat{a}_{ml}=\sum X_i^2/2n$, $\hat{a}_{mm}=\bar{X}$.
-\end{solution}
-\protect \hypertarget {soln:18.7}{}
-\begin{solution}{{18.7}}
-\end{solution}
-\protect \hypertarget {soln:18.8}{}
-\begin{solution}{{18.8}}
-\end{solution}
-\protect \hypertarget {soln:18.9}{}
-\begin{solution}{{18.9}}
-\end{solution}
-\protect \hypertarget {soln:18.10}{}
-\begin{solution}{{18.10}}
-\end{solution}
-\protect \hypertarget {soln:18.11}{}
-\begin{solution}{{18.11}}
-\end{solution}
-\protect \hypertarget {soln:18.12}{}
-\begin{solution}{{18.12}}
-\end{solution}
-\protect \hypertarget {soln:18.13}{}
-\begin{solution}{{18.13}}
-\end{solution}
-\protect \hypertarget {soln:18.14}{}
-\begin{solution}{{18.14}}
-\end{solution}
-\protect \hypertarget {soln:18.15}{}
-\begin{solution}{{18.15}}
-\end{solution}
-\protect \hypertarget {soln:18.16}{}
-\begin{solution}{{18.16}}
-\end{solution}
-\protect \hypertarget {soln:18.17}{}
-\begin{solution}{{18.17}}
-\end{solution}
-\protect \hypertarget {soln:18.18}{}
-\begin{solution}{{18.18}}
-\end{solution}
-\protect \hypertarget {soln:18.19}{}
-\begin{solution}{{18.19}}
-\end{solution}
-\protect \hypertarget {soln:18.20}{}
-\begin{solution}{{18.20}}
-\end{solution}
-\protect \hypertarget {soln:18.21}{}
-\begin{solution}{{18.21}}
-\end{solution}
-\protect \hypertarget {soln:18.22}{}
-\begin{solution}{{18.22}}
-\end{solution}
 \protect \hypertarget {soln:19.1}{}
 \begin{solution}{{19.1}}
+  $\hat{\theta}_{ML}=0.25$, $\hat{\theta}_{MM}=0.2$
+  $\hat{\theta}_{MM}=\frac{2{,}4-\bar{X}}{7}$
+\end{solution}
+\protect \hypertarget {soln:19.2}{}
+\begin{solution}{{19.2}}
+$\hat{a}=\ln(Y_{1})$, $\hat{b}=\ln(Y_{2})-\ln(Y_{1})$
+\end{solution}
+\protect \hypertarget {soln:19.3}{}
+\begin{solution}{{19.3}}
+\end{solution}
+\protect \hypertarget {soln:19.4}{}
+\begin{solution}{{19.4}}
+\end{solution}
+\protect \hypertarget {soln:19.5}{}
+\begin{solution}{{19.5}}
+\end{solution}
+\protect \hypertarget {soln:19.6}{}
+\begin{solution}{{19.6}}
+$\hat{a}_{ml}=\sum X_i^2/2n$, $\hat{a}_{mm}=\bar{X}$.
+\end{solution}
+\protect \hypertarget {soln:19.7}{}
+\begin{solution}{{19.7}}
+\end{solution}
+\protect \hypertarget {soln:19.8}{}
+\begin{solution}{{19.8}}
+\end{solution}
+\protect \hypertarget {soln:19.9}{}
+\begin{solution}{{19.9}}
+\end{solution}
+\protect \hypertarget {soln:19.10}{}
+\begin{solution}{{19.10}}
+\end{solution}
+\protect \hypertarget {soln:19.11}{}
+\begin{solution}{{19.11}}
+\end{solution}
+\protect \hypertarget {soln:19.12}{}
+\begin{solution}{{19.12}}
+\end{solution}
+\protect \hypertarget {soln:19.13}{}
+\begin{solution}{{19.13}}
+\end{solution}
+\protect \hypertarget {soln:19.14}{}
+\begin{solution}{{19.14}}
+\end{solution}
+\protect \hypertarget {soln:19.15}{}
+\begin{solution}{{19.15}}
+\end{solution}
+\protect \hypertarget {soln:19.16}{}
+\begin{solution}{{19.16}}
+\end{solution}
+\protect \hypertarget {soln:19.17}{}
+\begin{solution}{{19.17}}
+\end{solution}
+\protect \hypertarget {soln:19.18}{}
+\begin{solution}{{19.18}}
+\end{solution}
+\protect \hypertarget {soln:19.19}{}
+\begin{solution}{{19.19}}
+\end{solution}
+\protect \hypertarget {soln:19.20}{}
+\begin{solution}{{19.20}}
+\end{solution}
+\protect \hypertarget {soln:19.21}{}
+\begin{solution}{{19.21}}
+\end{solution}
+\protect \hypertarget {soln:19.22}{}
+\begin{solution}{{19.22}}
+\end{solution}
+\protect \hypertarget {soln:20.1}{}
+\begin{solution}{{20.1}}
     \begin{enumerate}
       \item $c=1/n$, да
       \item $c=1/(n+\sigma^2/\mu^2)$, нет, так как $\mu$ и $\sigma$ неизвестны
@@ -817,8 +835,8 @@ $\hat{a}_{ml}=\sum X_i^2/2n$, $\hat{a}_{mm}=\bar{X}$.
     \end{enumerate}
   
 \end{solution}
-\protect \hypertarget {soln:19.2}{}
-\begin{solution}{{19.2}}
+\protect \hypertarget {soln:20.2}{}
+\begin{solution}{{20.2}}
     \begin{enumerate}
     \item несмещённая, состоятельная, линейная, неэффективная
     \item несмещённая, состоятельная, линейная, неэффективная
@@ -833,8 +851,8 @@ $\hat{a}_{ml}=\sum X_i^2/2n$, $\hat{a}_{mm}=\bar{X}$.
     \end{enumerate}
   
 \end{solution}
-\protect \hypertarget {soln:19.3}{}
-\begin{solution}{{19.3}}
+\protect \hypertarget {soln:20.3}{}
+\begin{solution}{{20.3}}
 \begin{enumerate}
 \item $\hat\theta_{ML} = \max\{ Y_1, Y_2, \ldots, Y_n\}$.
 \item Все $Y_i$ меньше $\theta$, значит и $\hat\theta$ всегда меньше $\theta$, значит смещённая.
@@ -843,155 +861,131 @@ $\hat{a}_{ml}=\sum X_i^2/2n$, $\hat{a}_{mm}=\bar{X}$.
 \item $\hat\theta_{unbiased} = \frac{5n+1}{5n}\hat\theta$.
 \end{enumerate}
 \end{solution}
-\protect \hypertarget {soln:19.4}{}
-\begin{solution}{{19.4}}
+\protect \hypertarget {soln:20.4}{}
+\begin{solution}{{20.4}}
 \begin{enumerate}
   \item $\hat p$ несмещённая
   \item $\sigma^2 = n p(1-p)$.
   \item $\E(\hat\sigma^2) = (n-1)p(1-p)$, смещённая, $\hat\sigma^2_{unbiased} = \frac{n}{n-1} \hat\sigma^2$.
 \end{enumerate}
 \end{solution}
-\protect \hypertarget {soln:19.5}{}
-\begin{solution}{{19.5}}
-
-\end{solution}
-\protect \hypertarget {soln:19.6}{}
-\begin{solution}{{19.6}}
-
-\end{solution}
-\protect \hypertarget {soln:19.7}{}
-\begin{solution}{{19.7}}
-
-\end{solution}
-\protect \hypertarget {soln:19.8}{}
-\begin{solution}{{19.8}}
-
-\end{solution}
-\protect \hypertarget {soln:19.9}{}
-\begin{solution}{{19.9}}
-
-\end{solution}
-\protect \hypertarget {soln:19.10}{}
-\begin{solution}{{19.10}}
-
-\end{solution}
-\protect \hypertarget {soln:19.11}{}
-\begin{solution}{{19.11}}
-
-\end{solution}
-\protect \hypertarget {soln:19.12}{}
-\begin{solution}{{19.12}}
-  Закон распределения $X$ также экспоненциальный, но с другим $\lambda$. Честно находим $\E(X)=\theta/20$, отсюда
-  $\hat\theta_{unbiased} = 20X$.
-\end{solution}
-\protect \hypertarget {soln:19.13}{}
-\begin{solution}{{19.13}}
-
-\end{solution}
-\protect \hypertarget {soln:19.14}{}
-\begin{solution}{{19.14}}
-
-\end{solution}
-\protect \hypertarget {soln:19.15}{}
-\begin{solution}{{19.15}}
-
-\end{solution}
-\protect \hypertarget {soln:20.1}{}
-\begin{solution}{{20.1}}
-  $\frac{1}{1.8} - \frac{1}{2.2}$, $[0;10X]$.
-\end{solution}
-\protect \hypertarget {soln:20.2}{}
-\begin{solution}{{20.2}}
-\end{solution}
-\protect \hypertarget {soln:20.3}{}
-\begin{solution}{{20.3}}
-\end{solution}
-\protect \hypertarget {soln:20.4}{}
-\begin{solution}{{20.4}}
-\end{solution}
 \protect \hypertarget {soln:20.5}{}
 \begin{solution}{{20.5}}
+
 \end{solution}
 \protect \hypertarget {soln:20.6}{}
 \begin{solution}{{20.6}}
-Важна при обоих доверительных интервалах. Без предпосылки о нормальности интервал для дисперсии по данным формулам нельзя построить даже при больших $n$. При больших $n$ можно отказаться от предпосылки о нормальности при построении интервала для $\mu$.
+
 \end{solution}
 \protect \hypertarget {soln:20.7}{}
 \begin{solution}{{20.7}}
+
+\end{solution}
+\protect \hypertarget {soln:20.8}{}
+\begin{solution}{{20.8}}
+
+\end{solution}
+\protect \hypertarget {soln:20.9}{}
+\begin{solution}{{20.9}}
+
+\end{solution}
+\protect \hypertarget {soln:20.10}{}
+\begin{solution}{{20.10}}
+
+\end{solution}
+\protect \hypertarget {soln:20.11}{}
+\begin{solution}{{20.11}}
+
+\end{solution}
+\protect \hypertarget {soln:20.12}{}
+\begin{solution}{{20.12}}
+  Закон распределения $X$ также экспоненциальный, но с другим $\lambda$. Честно находим $\E(X)=\theta/20$, отсюда
+  $\hat\theta_{unbiased} = 20X$.
+\end{solution}
+\protect \hypertarget {soln:20.13}{}
+\begin{solution}{{20.13}}
+
+\end{solution}
+\protect \hypertarget {soln:20.14}{}
+\begin{solution}{{20.14}}
+
+\end{solution}
+\protect \hypertarget {soln:20.15}{}
+\begin{solution}{{20.15}}
+
 \end{solution}
 \protect \hypertarget {soln:21.1}{}
 \begin{solution}{{21.1}}
-к 1/2
+  $\frac{1}{1.8} - \frac{1}{2.2}$, $[0;10X]$.
 \end{solution}
 \protect \hypertarget {soln:21.2}{}
 \begin{solution}{{21.2}}
-  равномерно, $\alpha=0.05$; нет, он резко увеличивает ошибку второго рода
 \end{solution}
 \protect \hypertarget {soln:21.3}{}
 \begin{solution}{{21.3}}
-  $\alpha = 1/8$, $\beta = 9/32$
 \end{solution}
 \protect \hypertarget {soln:21.4}{}
 \begin{solution}{{21.4}}
-  $\alpha = \P(\cN(0;1) > -0.35) \approx 0.64$, $\beta = \P(\cN(0;1) \leq -1.76) \approx 0.04$.
 \end{solution}
 \protect \hypertarget {soln:21.5}{}
 \begin{solution}{{21.5}}
 \end{solution}
 \protect \hypertarget {soln:21.6}{}
 \begin{solution}{{21.6}}
+Важна при обоих доверительных интервалах. Без предпосылки о нормальности интервал для дисперсии по данным формулам нельзя построить даже при больших $n$. При больших $n$ можно отказаться от предпосылки о нормальности при построении интервала для $\mu$.
 \end{solution}
 \protect \hypertarget {soln:21.7}{}
 \begin{solution}{{21.7}}
+\end{solution}
+\protect \hypertarget {soln:22.1}{}
+\begin{solution}{{22.1}}
+к 1/2
+\end{solution}
+\protect \hypertarget {soln:22.2}{}
+\begin{solution}{{22.2}}
+  равномерно, $\alpha=0.05$; нет, он резко увеличивает ошибку второго рода
+\end{solution}
+\protect \hypertarget {soln:22.3}{}
+\begin{solution}{{22.3}}
+  $\alpha = 1/8$, $\beta = 9/32$
+\end{solution}
+\protect \hypertarget {soln:22.4}{}
+\begin{solution}{{22.4}}
+  $\alpha = \P(\cN(0;1) > -0.35) \approx 0.64$, $\beta = \P(\cN(0;1) \leq -1.76) \approx 0.04$.
+\end{solution}
+\protect \hypertarget {soln:22.5}{}
+\begin{solution}{{22.5}}
+\end{solution}
+\protect \hypertarget {soln:22.6}{}
+\begin{solution}{{22.6}}
+\end{solution}
+\protect \hypertarget {soln:22.7}{}
+\begin{solution}{{22.7}}
 
 \end{solution}
-\protect \hypertarget {soln:21.8}{}
-\begin{solution}{{21.8}}
+\protect \hypertarget {soln:22.8}{}
+\begin{solution}{{22.8}}
 Критерий Неймана-Пирсона сводится к сравнению $\bar X$ с порогом. При верной $H_0$ величина $\bar X$ распределена $\cN(0; \frac{4}{n})$.
 Отсюда искомый критерий имеет вид:
 Если $\bar X  \geqslant 0.825$, то гипотеза ${H_0}$ отвергается в пользу гипотезы ${H_a}$.
 \end{solution}
-\protect \hypertarget {soln:21.9}{}
-\begin{solution}{{21.9}}
+\protect \hypertarget {soln:22.9}{}
+\begin{solution}{{22.9}}
   Упрощая неравенство из леммы Неймана-Пирсона, получаем критерий: если $X_1\cdot X_2 >t$, то $H_0$ отвергается. Величину $t$ находим из уравнения
 \[
 \int_0^t (1 - t/x) \, dx = 0.05
 \]
 \end{solution}
-\protect \hypertarget {soln:21.10}{}
-\begin{solution}{{21.10}}
+\protect \hypertarget {soln:22.10}{}
+\begin{solution}{{22.10}}
 
 \end{solution}
-\protect \hypertarget {soln:21.11}{}
-\begin{solution}{{21.11}}
-\end{solution}
-\protect \hypertarget {soln:22.1}{}
-\begin{solution}{{22.1}}
-$\E(Ay)=A\E(y)$, $\Var(Ay)=A\Var(y)A^T$
-\end{solution}
-\protect \hypertarget {soln:22.2}{}
-\begin{solution}{{22.2}}
-
-\end{solution}
-\protect \hypertarget {soln:22.3}{}
-\begin{solution}{{22.3}}
-
-\end{solution}
-\protect \hypertarget {soln:22.4}{}
-\begin{solution}{{22.4}}
-
-\end{solution}
-\protect \hypertarget {soln:22.5}{}
-\begin{solution}{{22.5}}
-
-\end{solution}
-\protect \hypertarget {soln:22.6}{}
-\begin{solution}{{22.6}}
-
+\protect \hypertarget {soln:22.11}{}
+\begin{solution}{{22.11}}
 \end{solution}
 \protect \hypertarget {soln:23.1}{}
 \begin{solution}{{23.1}}
-Вычтем $2x^2 + 2y^2 + 2z^2 + 2w^2$. Получим, что оптимальное $x=0$. Далее, $z=0$, $y=0$. В итоге $w=1$ или $w=-1$.
+$\E(Ay)=A\E(y)$, $\Var(Ay)=A\Var(y)A^T$
 \end{solution}
 \protect \hypertarget {soln:23.2}{}
 \begin{solution}{{23.2}}
@@ -999,26 +993,27 @@ $\E(Ay)=A\E(y)$, $\Var(Ay)=A\Var(y)A^T$
 \end{solution}
 \protect \hypertarget {soln:23.3}{}
 \begin{solution}{{23.3}}
+
 \end{solution}
 \protect \hypertarget {soln:23.4}{}
 \begin{solution}{{23.4}}
+
 \end{solution}
 \protect \hypertarget {soln:23.5}{}
 \begin{solution}{{23.5}}
-$(5+4+1)=10$; длины — $\sqrt{5}\cdot\sqrt{99}$, $\sqrt{4}\cdot\sqrt{99}$, $\sqrt{1}\cdot\sqrt{99}$; выборочные дисперсии — $5$, $4$, $1$; $(5+4)/10=0.9$.
+
 \end{solution}
 \protect \hypertarget {soln:23.6}{}
 \begin{solution}{{23.6}}
+
 \end{solution}
 \protect \hypertarget {soln:24.1}{}
 \begin{solution}{{24.1}}
-$C_{20}^2\cdot 18$.
+Вычтем $2x^2 + 2y^2 + 2z^2 + 2w^2$. Получим, что оптимальное $x=0$. Далее, $z=0$, $y=0$. В итоге $w=1$ или $w=-1$.
 \end{solution}
 \protect \hypertarget {soln:24.2}{}
 \begin{solution}{{24.2}}
-  $1+x+x^2+x^3+x^4=(1-x^5)/(1-x)$
-  $1+x+x^2+x^3+\ldots = 1/(1-x)$
-  $(1+x)^4$
+
 \end{solution}
 \protect \hypertarget {soln:24.3}{}
 \begin{solution}{{24.3}}
@@ -1028,14 +1023,37 @@ $C_{20}^2\cdot 18$.
 \end{solution}
 \protect \hypertarget {soln:24.5}{}
 \begin{solution}{{24.5}}
-  0 с вероятностью 1/4 и 1 с вероятностью 3/4
+$(5+4+1)=10$; длины — $\sqrt{5}\cdot\sqrt{99}$, $\sqrt{4}\cdot\sqrt{99}$, $\sqrt{1}\cdot\sqrt{99}$; выборочные дисперсии — $5$, $4$, $1$; $(5+4)/10=0.9$.
 \end{solution}
 \protect \hypertarget {soln:24.6}{}
 \begin{solution}{{24.6}}
+\end{solution}
+\protect \hypertarget {soln:25.1}{}
+\begin{solution}{{25.1}}
+$C_{20}^2\cdot 18$.
+\end{solution}
+\protect \hypertarget {soln:25.2}{}
+\begin{solution}{{25.2}}
+  $1+x+x^2+x^3+x^4=(1-x^5)/(1-x)$
+  $1+x+x^2+x^3+\ldots = 1/(1-x)$
+  $(1+x)^4$
+\end{solution}
+\protect \hypertarget {soln:25.3}{}
+\begin{solution}{{25.3}}
+\end{solution}
+\protect \hypertarget {soln:25.4}{}
+\begin{solution}{{25.4}}
+\end{solution}
+\protect \hypertarget {soln:25.5}{}
+\begin{solution}{{25.5}}
+  0 с вероятностью 1/4 и 1 с вероятностью 3/4
+\end{solution}
+\protect \hypertarget {soln:25.6}{}
+\begin{solution}{{25.6}}
   да, сможет!
 \end{solution}
-\protect \hypertarget {soln:24.7}{}
-\begin{solution}{{24.7}}
+\protect \hypertarget {soln:25.7}{}
+\begin{solution}{{25.7}}
 $F_n = F_{n-1} + F_{n-2}$.
 Запишем разложения для $g(x)$, $xg(x)$ и $x^2 g(x)$ друг под другом. Вычитаем. Получаем, что $g(x) = x/(1-x-x^2)$.
 
@@ -1047,20 +1065,20 @@ g(x) = \frac{1}{\sqrt{5}}\left( \frac{a}{x+a} - \frac{b}{x+b}  \right),
 \]
 где $a=(1-\sqrt{5})/2$, $b=(1+\sqrt{5})/2$.
 \end{solution}
-\protect \hypertarget {soln:24.8}{}
-\begin{solution}{{24.8}}
+\protect \hypertarget {soln:25.8}{}
+\begin{solution}{{25.8}}
 Замечаем, что $h_2(t)=h_1(t)\cdot h_1(t)$. После первого шага:
 \[
 h_1(t) = 0.7t + 0.3th^2_1(t)
 \]
 \end{solution}
-\protect \hypertarget {soln:24.9}{}
-\begin{solution}{{24.9}}
+\protect \hypertarget {soln:25.9}{}
+\begin{solution}{{25.9}}
 
 \end{solution}
-\protect \hypertarget {soln:25.1}{}
-\begin{solution}{{25.1}}
+\protect \hypertarget {soln:26.1}{}
+\begin{solution}{{26.1}}
 \end{solution}
-\protect \hypertarget {soln:25.2}{}
-\begin{solution}{{25.2}}
+\protect \hypertarget {soln:26.2}{}
+\begin{solution}{{26.2}}
 \end{solution}
