more probability pro

--- a/title_bor_utf8_knitr.tex
+++ b/title_bor_utf8_knitr.tex
@@ -218,6 +218,8 @@
 \DeclareMathOperator*{\plim}{plim}
 \DeclareMathOperator{\MSE}{MSE}
 
+\newcommand{\norm}[1]{\left\lVert#1\right\rVert}
+
 \providecommand{\iff}{\Leftrightarrow}
 \providecommand{\hence}{\Rightarrow}
 
