--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -986,88 +986,40 @@ $\E(X)=9$, $\Var(X)=1.2$
 Пуассоновский поток событий. Обозначим: $X[a;a+\Delta]$ — количество  происшествий на интервале $[a;a+\Delta]$, $X_t=X[0;t]$ — количество происшествий за период $[0;t]$.
 
 Если:
-
-\begin{problem}
- На малом интервале времени вероятность одного происшествия примерно пропорциональна длине интервала, $\P(X[a;a+\Delta]=1)=\lambda \Delta + o(\Delta)$.
-\begin{sol}
-\end{sol}
-\end{problem}
-\begin{problem}
- На малом интервале времени несколько происшествий происходят существенно реже одного происшествия, $\P(X[a;a+\Delta] \geq 2)= o(\Delta)$.
-\begin{sol}
-\end{sol}
-\end{problem}
-\begin{problem}
- Стационарность приращений. Распределение случайной величины $X[a;a+\Delta]$, количества происшествий на интервале $[a;a+\Delta t]$, зависит только от $\Delta$, но не от $a$.
-\begin{sol}
-\end{sol}
-\end{problem}
-\begin{problem}
- Независимость приращений. Количество происшествий на непересекающихся интервалах времени независимы.
-\begin{sol}
-\end{sol}
-\end{problem}
-
+\begin{enumerate}
+\item На малом интервале времени вероятность одного происшествия примерно пропорциональна длине интервала, $\P(X[a;a+\Delta]=1)=\lambda \Delta + o(\Delta)$.
+\item На малом интервале времени несколько происшествий происходят существенно реже одного происшествия, $\P(X[a;a+\Delta] \geq 2)= o(\Delta)$.
+\item Стационарность приращений. Распределение случайной величины $X[a;a+\Delta]$, количества происшествий на интервале $[a;a+\Delta t]$, зависит только от $\Delta$, но не от $a$.
+\item Независимость приращений. Количество происшествий на непересекающихся интервалах времени независимы.
+\end{enumerate}
 То:
 
-\begin{problem}
- Время между $(i-1)$-ым и $i$-ым происшествием, $Y_i$, имеет экспоненциальное распределение $Y_i\sim exp(\lambda)$.
+\begin{enumerate}
+	\item Время между $(i-1)$-ым и $i$-ым происшествием, $Y_i$, имеет экспоненциальное распределение $Y_i\sim exp(\lambda)$.
 \[
-\begin{array}{l}
 f(y)=\begin{cases}
 \lambda e^{-\lambda y}, \; y\geq 0 \\
 0, \; y<0
 \end{cases} \\
-\E(Y_i)=1/\lambda \\
-\Var(Y_i)=1/\lambda^2 \\
-\end{array}
 \]
 
+В частности, $\E(Y_i)=1/\lambda$ и $\Var(Y_i)=1/\lambda^2$. Величины $Y_i$ независимы.
 
-
-\begin{sol}
-\end{sol}
-\end{problem}
-\begin{problem}
- Количество происшествий за единицу времени, $X$, имеет пуассоновское распределение $X\sim Pois(\lambda)$
+\item Количество происшествий за единицу времени, $X$, имеет пуассоновское распределение $X\sim Pois(\lambda)$
 \[
-\begin{array}{l}
 \P(X=k)=e^{-\lambda} \frac{\lambda^k}{k!} \\
-\E(X)=\lambda\\
-\Var(X)=\lambda
-\end{array}
 \]
-\begin{sol}
-\end{sol}
-\end{problem}
-\begin{problem}
- Отсюда смысл $\lambda$ — среднее количество событий за единицу времени, дисперсия количества событий за единицу времени
-\begin{sol}
-\end{sol}
-\end{problem}
-\begin{problem}
- Количество событий за период времени $[0;t]$, величина $X_t$, имеет пуассоновское распределение $X_t \sim Pois(\lambda t)$
-\[
-\begin{array}{l}
-\P(X_t=k)=e^{-\lambda  t} \cdot \frac{(\lambda  t)^k}{k!} \\
-\E(X_t)=\lambda  t \\
-\Var(X_t)=\lambda t
-\end{array}
-\]
-\begin{sol}
-\end{sol}
-\end{problem}
-\begin{problem}
- Величины $Y_i$ независимы
-\begin{sol}
-\end{sol}
-\end{problem}
-\begin{problem}
- Сумма двух независимых пуассоновских процессов с интенсивностями $\lambda_1$ и $\lambda_2$ — пуассоновский процесс с интенсивностью $\lambda_1+\lambda_2$
-\begin{sol}
-\end{sol}
-\end{problem}
+В частности, $\E(X)=\lambda$ и $\Var(X)=\lambda$
 
+ Отсюда смысл $\lambda$ — среднее количество событий за единицу времени, дисперсия количества событий за единицу времени
+\item Количество событий за период времени $[0;t]$, величина $X_t$, имеет пуассоновское распределение $X_t \sim Pois(\lambda t)$
+\[
+\P(X_t=k)=e^{-\lambda  t} \cdot \frac{(\lambda  t)^k}{k!} \\
+\]
+И, следовательно, $\E(X_t)=\lambda  t$, $\Var(X_t)=\lambda t$.
+
+\item Сумма двух независимых пуассоновских процессов с интенсивностями $\lambda_1$ и $\lambda_2$ — пуассоновский процесс с интенсивностью $\lambda_1+\lambda_2$
+\end{enumerate}
 
 Замена $Bin(n,p)$ на $Pois(\lambda=np)$ дает погрешность не более $\min\{p,np^2\}$ \\
 
