--- a/all_solutions.tex
+++ b/all_solutions.tex
@@ -454,6 +454,13 @@ $\Corr(X,Y)=1$, $\Corr(X,Z)=-1$
 \end{solution}
 \protect \hypertarget {soln:10.3}{}
 \begin{solution}{{10.3}}
+\end{solution}
+\protect \hypertarget {soln:10.4}{}
+\begin{solution}{{10.4}}
+теорема Пифагора
+\end{solution}
+\protect \hypertarget {soln:10.5}{}
+\begin{solution}{{10.5}}
 теорема Пифагора
 \end{solution}
 \protect \hypertarget {soln:11.1}{}
