--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -1603,6 +1603,50 @@ f(x, y) = \begin{cases}
 \end{problem}
 
 
+\begin{problem}
+Известно, что $\E(X)=4$, $\E(X^2) = 20$, $\E(X^3) = 10$, $\E(X^4)=10000$.
+
+\begin{enumerate}
+  \item Найдите проекцию величины $X$ на множество констант.
+  \item Найдите проекцию величины $X$ на множество случайных величин с нулевым математическим ожиданием.
+  \item Найдите $\cos(X, X^2)$.
+  \item Обозначим проекции $X$ и $X^2$ на множество случайных величин с нулевым математическим ожиданием буквами $R$ и $S$. Найдите $\cos(R, S)$. Как он связан с корреляцией $\Corr(X, X^2)$?
+\end{enumerate}
+
+\begin{sol}
+\end{sol}
+\end{problem}
+
+
+\begin{problem}
+Случайные величины $Y$ и $X$ имеют совместное распределение
+\begin{tabular}{*{4}{c}}
+\toprule
+& $X=-1$ & $X=0$ & $X=1$ \\
+\midrule
+ $Y=-1$ & 0.1 & 0.2 & 0.3 \\
+$Y=2$ & 0.1 & 0.1 & 0.2 \\
+\bottomrule
+\end{tabular}
+
+Потомственная ясновидящая Агафья знает значение $X$, но не знает значение $Y$. Агафья хочет построить прогноз $\hat Y$, зависящий от $X$ так, чтобы в среднем квадрат ошибки прогноза $\E((Y-\hat Y)^2)$ был минимален.
+
+\begin{enumerate}
+  \item Найдите наилучший прогноз вида $\hat Y = a \cdot X$.
+  \item Найдите наилучший прогноз вида $\hat Y = a + b \cdot X$.
+  \item Найдите наилучший прогноз $\hat Y$ произвольного вида.
+  \item Проинтепретируйте задачи нахождения наилучшего прогноза геометрически.
+  \item Представим себе, что Маланья, подруга Агафьи, наоборот, знает $Y$ и не знает $X$. Маланья пытается построить наилучший прогноз $\hat X = c + d \cdot Y$. Найдите $c$ и $d$. Как связаны $b$, $d$ и корреляция $X$ и $Y$?
+\end{enumerate}
+
+
+
+\begin{sol}
+теорема Пифагора
+\end{sol}
+\end{problem}
+
+
 
 
 \begin{problem}
