--- a/all_solutions.tex
+++ b/all_solutions.tex
@@ -601,20 +601,20 @@ $x_{max}=\mu$, $x=\mu \pm \sigma$
 \end{solution}
 \protect \hypertarget {soln:15.3}{}
 \begin{solution}{{15.3}}
-  $K=170$, $M=120$ (симметричный интервал) или $K=M=168$ (площадь с одного края можно принять за 0) \\
-  Вариант: театр, два входа, два гардероба а) только пары, б) по одному
 \end{solution}
 \protect \hypertarget {soln:15.4}{}
 \begin{solution}{{15.4}}
+  $K=170$, $M=120$ (симметричный интервал) или $K=M=168$ (площадь с одного края можно принять за 0) \\
+  Вариант: театр, два входа, два гардероба а) только пары, б) по одному
 \end{solution}
 \protect \hypertarget {soln:15.5}{}
 \begin{solution}{{15.5}}
-  $\Corr(Y_1, Y_2) = 2/5$, $E(Y_t | Y_{t-1}) = 0.4 Y_{t-1}$
-  В среднем Машка не становиться ни грустней, ни улыбчивей
-  Представить $\E(Y_t | Y_{t-1}, Y_{t-2})$ в виде $\E(Y_t | Y_{t-1}, Y_{t-2}) = a_1 Y_{t-1} + a_2 Y_{t-2} + Z$
 \end{solution}
 \protect \hypertarget {soln:15.6}{}
 \begin{solution}{{15.6}}
+  $\Corr(Y_1, Y_2) = 2/5$, $E(Y_t | Y_{t-1}) = 0.4 Y_{t-1}$
+  В среднем Машка не становиться ни грустней, ни улыбчивей
+  Представить $\E(Y_t | Y_{t-1}, Y_{t-2})$ в виде $\E(Y_t | Y_{t-1}, Y_{t-2}) = a_1 Y_{t-1} + a_2 Y_{t-2} + Z$
 \end{solution}
 \protect \hypertarget {soln:15.7}{}
 \begin{solution}{{15.7}}
@@ -627,6 +627,9 @@ $x_{max}=\mu$, $x=\mu \pm \sigma$
 \end{solution}
 \protect \hypertarget {soln:15.10}{}
 \begin{solution}{{15.10}}
+\end{solution}
+\protect \hypertarget {soln:15.11}{}
+\begin{solution}{{15.11}}
   $Y \sim N(0;1)$, нет, они нормальны только по отдельности, но не в совокупности, $\Corr(X,Y)=0$. Взять $Y=XZ$, где $Z$ принимает значение $1$ с вероятностью $p=3/4$ и $-1$ с вероятностью $1-p=1/4$
 \end{solution}
 \protect \hypertarget {soln:16.1}{}
