--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -1451,9 +1451,10 @@ F(x,y)=\begin{cases}
 \]
 
 \begin{enumerate}
-\item Найдите $\P(X>0.5)$, $\P(X+Y>0.5)$, $\P(X=Y+0.2)$, $\P(X\leq Y)$, $\P(Y>0.5|X>0.5)$
+\item Найдите $\P(X>0.5)$, $\P(X=Y+0.2)$,  $\P(Y>0.5|X>0.5)$;
 \item Найдите частные функции распределения $F(x)$, $F(y)$
-\item Найдите совместную функцию плотности $f(x,y)$
+\item Найдите совместную функцию плотности $f(x,y)$;
+\item Найдите $\P(X+Y>0.5)$, $\P(X\leq Y)$;
 \item Найдите $\E(X)$, $\E(XY)$, $\Cov(X,Y)$, $\Corr(X,Y)$
 \item Зависимы ли величины $X$ и $Y$?
 \end{enumerate}
@@ -2107,6 +2108,43 @@ $f_{X}(x)=
 \end{problem}
 
 \section{Многомерное нормальное}
+
+\begin{problem}
+Теорема Хэршела-Максвелла
+
+Рассмотрим замкнутую плоскую фигуру внутри которой случайно летают частицы. Обозначим $V=(V_x, V_y)'$ — вектор скоростей случайно выбираемое частицы.
+
+Максвелл предположил, что:
+
+\begin{enumerate}
+  \item Распределение вектора не должно меняться при повороте фигуры на любой угол.
+  \item Вертикальная и горизонтальная составляющая скорости должны быть независимы.
+\end{enumerate}
+
+\begin{enumerate}
+  \item Какой вектор получится, если вектор $V$ поверхнуть на $90^{\circ}$ по часовой стрелке?
+  \item Докажите, что $V_x$ распределено так же, как $V_y$ и также как $-V_y$.
+  \item Чему равное $\E(V_x)$? Верно ли, что $\Var(V_x) = \Var(V_y)$?
+  \item Докажите, что совместная функция плотности $f(v_x, v_y)$ представима в виде
+  \[
+f(v_x, v_y) = h(v_x^2 + v_y^2)
+  \]
+  \item Докажите, что совместная функция плотности
+  $f(v_x, v_y)$ представима в виде
+  \[
+f(v_x, v_y) = g(v_x^2)\cdot g(v_y^2)
+  \]
+  \item Докажите, что $h'(t)/h(t)$ равно константе.
+  \item Найдите функцию $h(t)$ с точностью до константы.
+  \item Пусть $U$ — угол, а $R=\sqrt{x^2+y^2}$. Найдите совместную функцию плотности $U$ и $R$ с точностью до константы.
+  \item Найдите функцию плотсности $V_x$, если единицы измерения скорости выбраны так, что $\Var(V_x) = 1$.
+\end{enumerate}
+
+
+
+\begin{sol}
+\end{sol}
+\end{problem}
 
 
 
