--- a/all_solutions.tex
+++ b/all_solutions.tex
@@ -595,6 +595,7 @@ $x_{max}=\mu$, $x=\mu \pm \sigma$
 \end{solution}
 \protect \hypertarget {soln:15.1}{}
 \begin{solution}{{15.1}}
+  \autocite{mukherjee2017proof}
 \end{solution}
 \protect \hypertarget {soln:15.2}{}
 \begin{solution}{{15.2}}
