--- a/probability_pro.bib
+++ b/probability_pro.bib
@@ -108,3 +108,10 @@
   url={https://www.math.upenn.edu/~wilf/DownldGF.html},
   addendum={Шикарная книжка про производящие функции}
 }
+
+@article{mukherjee2017proof,
+  title={A Proof of the Herschel-Maxwell Theorem Using the Strong Law of Large Numbers},
+  author={Mukherjee, Somabha},
+  journal={arXiv preprint arXiv:1701.02228},
+  year={2017}
+}
