--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -11,8 +11,10 @@
 
 \usepackage{minted}
 
-\usepackage[bibencoding = auto, backend = biber,
-sorting = none]{biblatex}
+\usepackage[bibencoding = auto,
+backend = biber,
+sorting = none,
+style=alphabetic]{biblatex}
 
 \addbibresource{probability_pro.bib}
 
@@ -2110,7 +2112,7 @@ $f_{X}(x)=
 \section{Многомерное нормальное}
 
 \begin{problem}
-Теорема Хэршела-Максвелла
+Теорема Хершела-Максвелла
 
 Рассмотрим замкнутую плоскую фигуру внутри которой случайно летают частицы. Обозначим $V=(V_x, V_y)'$ — вектор скоростей случайно выбираемое частицы.
 
@@ -2143,6 +2145,7 @@ f(v_x, v_y) = g(v_x^2)\cdot g(v_y^2)
 
 
 \begin{sol}
+  \autocite{mukherjee2017proof}
 \end{sol}
 \end{problem}
 
