inconsistent mle example

--- a/all_solutions.tex
+++ b/all_solutions.tex
@@ -817,6 +817,10 @@ $\hat{a}_{ml}=\sum X_i^2/2n$, $\hat{a}_{mm}=\bar{X}$.
 \protect \hypertarget {soln:20.22}{}
 \begin{solution}{{20.22}}
 \end{solution}
+\protect \hypertarget {soln:20.23}{}
+\begin{solution}{{20.23}}
+  $\plim_{n\to\infty} \hat\alpha_{ML}(n) = 0$, не является состоятельной
+\end{solution}
 \protect \hypertarget {soln:21.1}{}
 \begin{solution}{{21.1}}
     \begin{enumerate}
