--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -2419,7 +2419,7 @@ Y
 
 
 
-
+\newpage
 \section{Статистика ноль}
 
 
@@ -3107,6 +3107,46 @@ W=\begin{pmatrix}
 \begin{sol}
 \end{sol}
 \end{problem}
+
+
+\begin{problem}
+
+Величины $X_1$, \ldots, $X_n$ независимы и равномерны на отрезке $[-1; 1]$. Величины $Y_1$, \ldots, $Y_n$ независимы и имеют на отрезке $[-1; 1]$ функцию плотности
+
+\[
+h(y) = \frac{3\exp(\alpha^{-4})}{4}(1 - \exp(2\alpha^{-4})(y+\alpha - 1)^2)
+\]
+
+Исследовательница Зинаида создаёт величины $Z_1$, \ldots, $Z_n$ по простому принципу. Каждая $Z_i$ равна $Y_i$ с вероятностью $\alpha$ и $X_i$ с вероятностью $(1-\alpha)$.
+
+Пусть $n=500$.
+
+\begin{enumerate}
+\item Постройте выборку из $X_i$ и изобразите результат с помощью гистограммы.
+\item Постройте выборку из $Y_i$ при $\alpha = 0.5$ и изобразите результат на гистограмме.
+\item Постройте выборку из $Z_i$ при $\alpha = 0.5$ и изобразите результат на гистограмме.
+\end{enumerate}
+
+У рассеянной Зинаиды сохранилась только выборка из $Z_i$. Она не помнит ни $\alpha$, ни $X_i$, ни $Y_i$. И поэтому Зинаида решила восстановить $\alpha$ с помощью максимального правдоподобия.
+
+\begin{enumerate}[resume]
+
+\item Для полученной выборки $Z_i$ постройте график функции правдоподобия. Будьте осторожны! Если по-быстрому строить график командой встроенной в R/python/julia/\ldots, то получится неверный график! Обратите внимание на значения функции в точках $Z_i$.
+
+\item Найдите оценку максимального правдоподобия для параметра $\alpha$ по полученной выборке.
+
+\item Найдите $\plim_{n\to\infty} \hat\alpha_{ML}(n)$ для произвольного $\alpha$. Является ли оценка $\hat\alpha_{ML}$ состоятельной?
+
+\end{enumerate}
+
+\begin{sol}
+  $\plim_{n\to\infty} \hat\alpha_{ML}(n) = 0$, не является состоятельной
+\end{sol}
+\end{problem}
+
+
+
+
 
 \section{Настоящий ценитель}
 
