problems from Hunter

--- a/all_solutions.tex
+++ b/all_solutions.tex
@@ -445,6 +445,10 @@ $\Corr(X,Y)=1$, $\Corr(X,Z)=-1$
 \protect \hypertarget {soln:9.24}{}
 \begin{solution}{{9.24}}
 \end{solution}
+\protect \hypertarget {soln:9.25}{}
+\begin{solution}{{9.25}}
+$X$ равномерна на $[-1;1]$; пара $(X, Y)$ равномерна в круге $x^2+y^2 \leq 1$.
+\end{solution}
 \protect \hypertarget {soln:10.1}{}
 \begin{solution}{{10.1}}
 \end{solution}
@@ -821,6 +825,10 @@ $\hat{a}_{ml}=\sum X_i^2/2n$, $\hat{a}_{mm}=\bar{X}$.
 \begin{solution}{{20.23}}
   $\plim_{n\to\infty} \hat\alpha_{ML}(n) = 0$, не является состоятельной
 \end{solution}
+\protect \hypertarget {soln:20.24}{}
+\begin{solution}{{20.24}}
+
+\end{solution}
 \protect \hypertarget {soln:21.1}{}
 \begin{solution}{{21.1}}
     \begin{enumerate}
@@ -980,31 +988,13 @@ $\hat{a}_{ml}=\sum X_i^2/2n$, $\hat{a}_{mm}=\bar{X}$.
 \end{solution}
 \protect \hypertarget {soln:24.1}{}
 \begin{solution}{{24.1}}
-$\E(Ay)=A\E(y)$, $\Var(Ay)=A\Var(y)A^T$
-\end{solution}
-\protect \hypertarget {soln:24.2}{}
-\begin{solution}{{24.2}}
-
-\end{solution}
-\protect \hypertarget {soln:24.3}{}
-\begin{solution}{{24.3}}
-
-\end{solution}
-\protect \hypertarget {soln:24.4}{}
-\begin{solution}{{24.4}}
-
-\end{solution}
-\protect \hypertarget {soln:24.5}{}
-\begin{solution}{{24.5}}
-
-\end{solution}
-\protect \hypertarget {soln:24.6}{}
-\begin{solution}{{24.6}}
-
+При $p_N$ заданном в $H_0$ критерий Пирсона имеет хи-квадрат распределение с двумя степенями свободы.
+При оцениваемом $p_N$ критерий Пирсона имеет хи-квадрат распределение с одной степенью свободы.
+  
 \end{solution}
 \protect \hypertarget {soln:25.1}{}
 \begin{solution}{{25.1}}
-Вычтем $2x^2 + 2y^2 + 2z^2 + 2w^2$. Получим, что оптимальное $x=0$. Далее, $z=0$, $y=0$. В итоге $w=1$ или $w=-1$.
+$\E(Ay)=A\E(y)$, $\Var(Ay)=A\Var(y)A^T$
 \end{solution}
 \protect \hypertarget {soln:25.2}{}
 \begin{solution}{{25.2}}
@@ -1012,26 +1002,27 @@ $\E(Ay)=A\E(y)$, $\Var(Ay)=A\Var(y)A^T$
 \end{solution}
 \protect \hypertarget {soln:25.3}{}
 \begin{solution}{{25.3}}
+
 \end{solution}
 \protect \hypertarget {soln:25.4}{}
 \begin{solution}{{25.4}}
+
 \end{solution}
 \protect \hypertarget {soln:25.5}{}
 \begin{solution}{{25.5}}
-$(5+4+1)=10$; длины — $\sqrt{5}\cdot\sqrt{99}$, $\sqrt{4}\cdot\sqrt{99}$, $\sqrt{1}\cdot\sqrt{99}$; выборочные дисперсии — $5$, $4$, $1$; $(5+4)/10=0.9$.
+
 \end{solution}
 \protect \hypertarget {soln:25.6}{}
 \begin{solution}{{25.6}}
+
 \end{solution}
 \protect \hypertarget {soln:26.1}{}
 \begin{solution}{{26.1}}
-$C_{20}^2\cdot 18$.
+Вычтем $2x^2 + 2y^2 + 2z^2 + 2w^2$. Получим, что оптимальное $x=0$. Далее, $z=0$, $y=0$. В итоге $w=1$ или $w=-1$.
 \end{solution}
 \protect \hypertarget {soln:26.2}{}
 \begin{solution}{{26.2}}
-  $1+x+x^2+x^3+x^4=(1-x^5)/(1-x)$
-  $1+x+x^2+x^3+\ldots = 1/(1-x)$
-  $(1+x)^4$
+
 \end{solution}
 \protect \hypertarget {soln:26.3}{}
 \begin{solution}{{26.3}}
@@ -1041,14 +1032,37 @@ $C_{20}^2\cdot 18$.
 \end{solution}
 \protect \hypertarget {soln:26.5}{}
 \begin{solution}{{26.5}}
-  0 с вероятностью 1/4 и 1 с вероятностью 3/4
+$(5+4+1)=10$; длины — $\sqrt{5}\cdot\sqrt{99}$, $\sqrt{4}\cdot\sqrt{99}$, $\sqrt{1}\cdot\sqrt{99}$; выборочные дисперсии — $5$, $4$, $1$; $(5+4)/10=0.9$.
 \end{solution}
 \protect \hypertarget {soln:26.6}{}
 \begin{solution}{{26.6}}
+\end{solution}
+\protect \hypertarget {soln:27.1}{}
+\begin{solution}{{27.1}}
+$C_{20}^2\cdot 18$.
+\end{solution}
+\protect \hypertarget {soln:27.2}{}
+\begin{solution}{{27.2}}
+  $1+x+x^2+x^3+x^4=(1-x^5)/(1-x)$
+  $1+x+x^2+x^3+\ldots = 1/(1-x)$
+  $(1+x)^4$
+\end{solution}
+\protect \hypertarget {soln:27.3}{}
+\begin{solution}{{27.3}}
+\end{solution}
+\protect \hypertarget {soln:27.4}{}
+\begin{solution}{{27.4}}
+\end{solution}
+\protect \hypertarget {soln:27.5}{}
+\begin{solution}{{27.5}}
+  0 с вероятностью 1/4 и 1 с вероятностью 3/4
+\end{solution}
+\protect \hypertarget {soln:27.6}{}
+\begin{solution}{{27.6}}
   да, сможет!
 \end{solution}
-\protect \hypertarget {soln:26.7}{}
-\begin{solution}{{26.7}}
+\protect \hypertarget {soln:27.7}{}
+\begin{solution}{{27.7}}
 $F_n = F_{n-1} + F_{n-2}$.
 Запишем разложения для $g(x)$, $xg(x)$ и $x^2 g(x)$ друг под другом. Вычитаем. Получаем, что $g(x) = x/(1-x-x^2)$.
 
@@ -1060,36 +1074,36 @@ g(x) = \frac{1}{\sqrt{5}}\left( \frac{a}{x+a} - \frac{b}{x+b}  \right),
 \]
 где $a=(1-\sqrt{5})/2$, $b=(1+\sqrt{5})/2$.
 \end{solution}
-\protect \hypertarget {soln:26.8}{}
-\begin{solution}{{26.8}}
+\protect \hypertarget {soln:27.8}{}
+\begin{solution}{{27.8}}
 Замечаем, что $h_2(t)=h_1(t)\cdot h_1(t)$. После первого шага:
 \[
 h_1(t) = 0.7t + 0.3th^2_1(t)
 \]
 \end{solution}
-\protect \hypertarget {soln:26.9}{}
-\begin{solution}{{26.9}}
+\protect \hypertarget {soln:27.9}{}
+\begin{solution}{{27.9}}
 
-\end{solution}
-\protect \hypertarget {soln:27.1}{}
-\begin{solution}{{27.1}}
-\end{solution}
-\protect \hypertarget {soln:27.2}{}
-\begin{solution}{{27.2}}
 \end{solution}
 \protect \hypertarget {soln:28.1}{}
 \begin{solution}{{28.1}}
-  Если величина $X$ равновероятно принимает $k$ значений, то спутанность равна $k$. У равномерной на $[0;a]$ спутанность равна $a$.
 \end{solution}
 \protect \hypertarget {soln:28.2}{}
 \begin{solution}{{28.2}}
 \end{solution}
-\protect \hypertarget {soln:28.3}{}
-\begin{solution}{{28.3}}
+\protect \hypertarget {soln:29.1}{}
+\begin{solution}{{29.1}}
+  Если величина $X$ равновероятно принимает $k$ значений, то спутанность равна $k$. У равномерной на $[0;a]$ спутанность равна $a$.
 \end{solution}
-\protect \hypertarget {soln:28.4}{}
-\begin{solution}{{28.4}}
+\protect \hypertarget {soln:29.2}{}
+\begin{solution}{{29.2}}
 \end{solution}
-\protect \hypertarget {soln:28.5}{}
-\begin{solution}{{28.5}}
+\protect \hypertarget {soln:29.3}{}
+\begin{solution}{{29.3}}
+\end{solution}
+\protect \hypertarget {soln:29.4}{}
+\begin{solution}{{29.4}}
+\end{solution}
+\protect \hypertarget {soln:29.5}{}
+\begin{solution}{{29.5}}
 \end{solution}
