--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -218,9 +218,6 @@ $0.3$ — против часовой стрелки. Обозначим $T$ —
 \section{Хочу ещё задач!}
 
 
-
-
-
 \begin{problem}
 Наугад из четырех тузов разных мастей выбираются два.
 $\P(\text{они будут разного цвета})$?
@@ -1569,6 +1566,19 @@ f(x, y) = \begin{cases}
 \item Выпишите функцию плотности бета-распределения
 \end{enumerate}
 \begin{sol}
+\end{sol}
+\end{problem}
+
+
+\begin{problem}
+Случайным образом на сфере $x^2+y^2+z^2=1$ равномерно выбирается точка. Её координаты — случайные величины $X$, $Y$ и $Z$.
+
+\begin{enumerate}
+	\item Найдите функцию плотности величины $X$;
+	\item Найдите совместную функцию плотности пары величин $X$ и $Y$;
+\end{enumerate}
+\begin{sol}
+$X$ равномерна на $[-1;1]$; пара $(X, Y)$ равномерна в круге $x^2+y^2 \leq 1$.
 \end{sol}
 \end{problem}
 
@@ -3145,7 +3155,26 @@ h(y) = \frac{3\exp(\alpha^{-4})}{4}(1 - \exp(2\alpha^{-4})(y+\alpha - 1)^2)
 \end{problem}
 
 
+\begin{problem}
+Величины $X_1$, \ldots, $X_n$ независимы и одинаково распределены с функцией распределения 
+\[
+	F(x)=1/(1+\exp(a-x))
+\]
 
+Рассмотрим три оценки: оценку максимального правдоподобия, $\hat a_{ML}$, простую медиану $\hat a_{Med} = \Med{X_1, \ldots, X_n}$ и скорректированную медиану $\hat a_{1step}=\hat a_{Med} - \frac{\ell'(\hat a_{Med})}{\ell''(\hat a_{Med})}$.
+
+\begin{enumerate}
+  \item Существует ли в явном виде формула для $\hat a_{ML}$ в этой задаче?
+  \item Сгенерируйте 1000 выборок по $n=20$ наблюдений в каждой для $a=2$. Для каждой выборки найдите оценки трёх видов. Таким образом получится 1000 оценок каждого вида. Рассчитайте выборочную дисперсию и выборочное среднее каждой оценки. 
+\item Прокомментируйте полученные результаты
+\end{enumerate}
+
+
+
+\begin{sol}
+
+\end{sol}
+\end{problem}
 
 
 \section{Настоящий ценитель}
@@ -3487,7 +3516,7 @@ $\hat{\beta}_{2}=\frac{\sum{X_{i}Y_{i}}}{\sum{X_{i}^{2}}}$.
 \end{sol}
 \end{problem}
 
-\section{Проверка гипотез}
+\section{Проверка гипотез: общая теория}
 
 
 \begin{problem}
@@ -3600,9 +3629,13 @@ x_1 + x_2, \text{ если } x_1, x_2 \in [0;1]; \\
 
 
 \begin{problem}
-Пусть ${X_1}, \ldots, {X_n}$ — случайная выборка из нормального распределения с известным математическим ожиданием $\mu=1$ и неизвестной дисперсией $\sigma ^2$.
+Пусть ${X_1}, \ldots, {X_n}$ — случайная выборка из нормального распределения 
+с известным математическим ожиданием $\mu=1$ и неизвестной дисперсией $\sigma ^2$.
 
-Объем выборки $n = 16$. Тестируются основная гипотеза ${H_0}:\sigma^2  = 4$ против альтернативной гипотезы  ${H_a}:\sigma^2  = 9$. С помощью леммы Неймана–Пирсона найдите наиболее мощный критерий, имеющий уровень значимости $\alpha  = 0.05$.
+Объем выборки $n = 16$. Тестируются основная гипотеза ${H_0}:\sigma^2  = 4$ 
+против альтернативной гипотезы  ${H_a}:\sigma^2  = 9$. 
+С помощью леммы Неймана–Пирсона найдите наиболее мощный критерий, 
+имеющий уровень значимости $\alpha  = 0.05$.
 \begin{sol}
 \end{sol}
 \end{problem}
@@ -3610,7 +3643,35 @@ x_1 + x_2, \text{ если } x_1, x_2 \in [0;1]; \\
 
 %\end{comment}
 
+\section{Таблицы сопряжённости}
 
+\begin{problem}
+Помимо широко известной системы групп крови AB0, существуют также и другие, например система MN. 
+В этой системе существует три группы крови: M, N и MN. 
+В гене существует всего два аллеля, M и N, кодоминантные по отношению друг к другу. 
+Обладатели группы крови M имеют гомозиготный генотип MM, 
+обладатели группы N — гомозиготный NN, обладатели группы MN — гетерозиготный MN. 
+Наследование систем групп крови AB0 и MN происходит независимо друг от друга.
+
+В идеальных условиях частоты генотипов должны находится в равновесии Харди-Вайнберга. 
+Частоты генотипов должны быть равны: $p_{NN}=p_N^2$, $p_{MN}=2p_N(1-p_N)$, $p_{MM}=(1-p_N)^2$, 
+где $p_N$ — частота аллеля N в популяции.
+
+У 50 людей определили их генотипы: оказалось 10 человек с генотипом NN, 20 — с генотипом MM, и 20 — с генотипом MN. 
+
+\begin{enumerate}
+  \item С помощью критерия хи-квадрат Пирсона проверьте гипотезу, что условия Харди-Вайнберга выполнены и $p_N=0.3$.
+  \item В рамках условий Харди-Вайнберга оцените неизвестную вероятность $p_N$ с помощью максимального правдоподобия.
+  \item С помощью критерия хи-квадрат Пирсона проверьте гипотезу, что условия Хадри-Вайнберга выполнены.
+\end{enumerate}
+
+  
+  
+  \begin{sol}
+При $p_N$ заданном в $H_0$ критерий Пирсона имеет хи-квадрат распределение с двумя степенями свободы.
+При оцениваемом $p_N$ критерий Пирсона имеет хи-квадрат распределение с одной степенью свободы.
+  \end{sol}
+\end{problem}
 
 
 
@@ -3651,6 +3712,7 @@ $\E(Ay)=A\E(y)$, $\Var(Ay)=A\Var(y)A^T$
 
 \end{sol}
 \end{problem}
+
 
 \begin{problem}
 Найдите матрицу $A$ для каждой из ситуаций:
