--- a/all_solutions.tex
+++ b/all_solutions.tex
@@ -990,6 +990,8 @@ $\hat{a}_{ml}=\sum X_i^2/2n$, $\hat{a}_{mm}=\bar{X}$.
 \begin{solution}{{24.1}}
 При $p_N$ заданном в $H_0$ критерий Пирсона имеет хи-квадрат распределение с двумя степенями свободы.
 При оцениваемом $p_N$ критерий Пирсона имеет хи-квадрат распределение с одной степенью свободы.
+
+\url{https://ru.wikipedia.org/wiki/Закон_Харди_—_Вайнберга}
   
 \end{solution}
 \protect \hypertarget {soln:25.1}{}
