--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -3670,6 +3670,8 @@ x_1 + x_2, \text{ если } x_1, x_2 \in [0;1]; \\
   \begin{sol}
 При $p_N$ заданном в $H_0$ критерий Пирсона имеет хи-квадрат распределение с двумя степенями свободы.
 При оцениваемом $p_N$ критерий Пирсона имеет хи-квадрат распределение с одной степенью свободы.
+
+\url{https://ru.wikipedia.org/wiki/Закон_Харди_—_Вайнберга}
   \end{sol}
 \end{problem}
 
