--- a/all_solutions.tex
+++ b/all_solutions.tex
@@ -663,9 +663,11 @@ $x_{max}=\mu$, $x=\mu \pm \sigma$
 \end{solution}
 \protect \hypertarget {soln:17.3}{}
 \begin{solution}{{17.3}}
+  да
 \end{solution}
 \protect \hypertarget {soln:17.4}{}
 \begin{solution}{{17.4}}
+да
 \end{solution}
 \protect \hypertarget {soln:17.5}{}
 \begin{solution}{{17.5}}
@@ -680,6 +682,7 @@ $x_{max}=\mu$, $x=\mu \pm \sigma$
 \end{solution}
 \protect \hypertarget {soln:17.8}{}
 \begin{solution}{{17.8}}
+  укреплять те места, где не было следов пуль
 \end{solution}
 \protect \hypertarget {soln:17.9}{}
 \begin{solution}{{17.9}}
@@ -695,6 +698,10 @@ $x_{max}=\mu$, $x=\mu \pm \sigma$
 \end{solution}
 \protect \hypertarget {soln:17.13}{}
 \begin{solution}{{17.13}}
+\end{solution}
+\protect \hypertarget {soln:17.14}{}
+\begin{solution}{{17.14}}
+  $m^2=1/2$, $\Med(X) = 1/\sqrt{2}$.
 \end{solution}
 \protect \hypertarget {soln:18.1}{}
 \begin{solution}{{18.1}}
