--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -2465,8 +2465,10 @@ Y
 
 
 \begin{sol}
+  да
 \end{sol}
 \end{problem}
+
 \begin{problem}
   Деканат утверждает, что если студента N перевести из группы
 А в группу В, то средний рейтинг каждой группы возрастет. Возможно
@@ -2475,8 +2477,10 @@ Y
 
 
 \begin{sol}
+да
 \end{sol}
 \end{problem}
+
 \begin{problem}
   Есть три группы по 10 человек, две группы по 20 человек и
 одна группа по 40 человек. У каждой из групп свой преподаватель.
@@ -2492,6 +2496,9 @@ Y
 \begin{sol}
 \end{sol}
 \end{problem}
+
+
+
 \begin{problem}
  Приведите примеры случайных величин, для которых:
 \begin{enumerate}
@@ -2501,27 +2508,34 @@ Y
 \item $\Med(X^2)\neq \Med(X)^2$
 \end{enumerate}
 
-
 \begin{sol}
   два независимых симметричных распределения; практически любая сумма несимметричных распределений, например, два независимых с $p(x)=2-2x$ на $[0;1]$; неотрицательные случайные величины; симметричные около нуля случайные величины
 \end{sol}
 \end{problem}
+
+
+
 \begin{problem}
  Исследователь Вениамин измерил рост пяти случайно выбранных человек. Какова вероятность того, что истинная медиана роста лежит между минимумом и максимумом из этих пяти наблюдений? Предположим, что рост имеет непрерывное распределение.
-
 
 \begin{sol}
   Исключим те варианты, когда все пять наблюдений оказались или синхронно выше, или синхронно ниже медианы, получаем, $p=1-2\cdot 0.5^5=1-0.5^4$.
 \end{sol}
 \end{problem}
+
+
 \begin{problem}
  Во время Второй Мировой войны американские военные собрали статистику попаданий пуль в фюзеляж самолёта.  По самолётам, вернувшимся из полёта на базу, была составлена карта повреждений среднестатистического самолёта. С этими данными военные обратились к статистику Абрахаму Вальду с вопросом, в каких местах следует увеличить броню самолёта.
 
 Что посоветовал Абрахам Вальд и почему?
 
 \begin{sol}
+  укреплять те места, где не было следов пуль
 \end{sol}
 \end{problem}
+
+
+
 \begin{problem}
  Два лекарства испытывали на мужчинах и женщинах. Каждый
 человек принимал только одно лекарство. Общий процент людей,
@@ -2533,10 +2547,11 @@ Y
 \item Какое лекарству нужно порекомендовать больному, не зная его пола?
 \end{enumerate}
 
-
 \begin{sol}
 \end{sol}
 \end{problem}
+
+
 \begin{problem}
  Из набора чисел $\{2,4,10,14\}$ случайным образом равновероятно по очереди выбираются три числа с возможностью повторения.
 
@@ -2553,6 +2568,10 @@ Y
 \begin{sol}
 \end{sol}
 \end{problem}
+
+
+
+
 \begin{problem}
  Из фиксированного множества $N$ чисел случайным образом выбирают $n$ чисел. Известно, что если бы выбирать наугад всего одно число, то тогда математическое ожидание и дисперсие этого одного случайного числа были бы равны $\E(X_1)=\mu$ и $\Var(X_1)=\sigma^2$. Обозначим среднее арифметическое выбранных $n$ чисел с помощью $\bar{X}_n$. Чему равны $\E(\bar{X}_n)$ и $\Var(\bar{X}_n)$, если:
 
@@ -2565,6 +2584,10 @@ Y
 \begin{sol}
 \end{sol}
 \end{problem}
+
+
+
+
 \begin{problem}
  Исследовательница Мишель подбрасывает кубик $100$ раз. Пусть $X_1$ — количество выпадений единицы, а $X_6$ — количество выпадений шестёрки.
 \begin{enumerate}
@@ -2577,10 +2600,30 @@ Y
 \begin{sol}
 \end{sol}
 \end{problem}
+
+
+
+
 \begin{problem}
  В множестве $A$ всего два числ, $A=\{24, 42\}$. Случайным образом из множества $A$ выбираются 3 числа с возможностью повторений. Явно найдите закон распределения выборочного среднего, выборочной медианы, выборочной моды, выборочного минимима и выборочного максимума.
 
 \begin{sol}
+\end{sol}
+\end{problem}
+
+
+
+\begin{problem}
+  Величины $X$ и $Y$ независимы и одинаково распределены на отрезке $[0;1]$ с функцией плотност.
+  
+  \begin{enumerate}
+    \item Найдите теоретическую медиану $\Med(X)$.
+    \item Найдите теоретическую медиану $\Med(X+Y)$.
+  \end{enumerate}
+
+
+  \begin{sol}
+  $m^2=1/2$, $\Med(X) = 1/\sqrt{2}$.
 \end{sol}
 \end{problem}
 
