--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -2436,7 +2436,7 @@ Y
 
 
 \begin{problem}
-  Имеется пять чисел: $x$, $9$, $5$, $4$, $7$. При каком значении $x$ медиана будет равна среднему?
+  Имеется пять действительных чисел: $x$, $9$, $5$, $4$, $7$. При каком значении $x$ медиана будет равна среднему?
 
 
 \begin{sol}
@@ -2614,7 +2614,7 @@ Y
 
 
 \begin{problem}
-  Величины $X$ и $Y$ независимы и одинаково распределены на отрезке $[0;1]$ с функцией плотност.
+  Величины $X$ и $Y$ независимы и одинаково распределены на отрезке $[0;1]$ с функцией плотности $f(x)=2x$.
   
   \begin{enumerate}
     \item Найдите теоретическую медиану $\Med(X)$.
