--- a/all_solutions.tex
+++ b/all_solutions.tex
@@ -360,6 +360,9 @@ $\frac{a}{a+b}$, экспоненциально с параметром $a+b$, $
 \protect \hypertarget {soln:8.17}{}
 \begin{solution}{{8.17}}
 \end{solution}
+\protect \hypertarget {soln:8.18}{}
+\begin{solution}{{8.18}}
+\end{solution}
 \protect \hypertarget {soln:9.1}{}
 \begin{solution}{{9.1}}
 \end{solution}
